Refactor Swagger UI
